# vitesse

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  file_inventory.md  project_summary.md  quick_reference.md  quick_start.md  redeploy.sh  test_vitesse.sh  verify.sh  vitesse_ai_complete_summary.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  cleanup_db.py  debug_discovery.py  entrypoint.sh  examples_architecture.py  pyproject.toml  test_llm.py  verify_autonomous.py  verify_deployment.py  verify_integration.py  verify_mcp.py
backend/aether/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260201114806_initial_schema_reset.py  20260201_001_initial_schema_reset.py  20260202_001_add_reviewer_tracking.py  20260202_add_reviewer_tracking.py  20260203_001_add_prompt_templates.py  20260204_001_add_langfuse_config.py  20260204_002_fix_prompt_templates_schema_mismatch.py  20260204_003_add_prompt_template_id_to_agent_mappings.py  20260207170008_recreate_generic_queue_requests.py  20260207_001_purge_generic.py  20260207_002_recreate_generic_queue_requests.py  20260207_purge_generic.py  20260212_001_add_vitesse_integrations.py  20260212_add_vitesse_integrations.py  20260213214528_add_harvest_sources.py  20260213_001_add_harvest_sources.py  20260214_001_fix_integration_enum.py  20260214_002_add_documents_table.py  20260214_002_fix_integration_enum_to_varchar.py  20260214_003_recreate_documents_table.py  20260214_004_add_discovery_columns.py  20260214_005_add_harvest_collaboration_tables.py  20260215_001_add_agent_name_to_metrics.py  20260215_002_align_metrics_schema.py
backend/app/: main.py
backend/app/agents/: analyst.py  base.py  discovery.py  enhanced_discovery.py  guardian.py  ingestor.py  integration_monitor.py  knowledge_harvester.py  mapper.py  orchestrator.py  prompt_registry.py  reviewer.py  self_healing.py  sentinel.py  vitesse_orchestrator.py  workflow.py  writer.py
backend/app/api/: api.py  deps.py
backend/app/core/: cache.py  checkpoint.py  config.py  financial_services.py  knowledge_db.py  langfuse_client.py  logging.py  metrics.py  ratelimit.py  security.py  seed_data.py  shared_state.py  telemetry.py
backend/app/db/: base.py  init_vectors.py  langfuse_seed.py  llm_seed.py  products_seed.py  session.py  update_color.py  user_seed.py
backend/app/deployer/: base.py  container_deployer.py  process_deployer.py  script_generator.py  templates.py
backend/app/mcp/: README.md  main.py  server.py  wrapper.py
backend/app/middleware/: error_handler.py
backend/app/models/: __init__.py  (+13 more)
backend/tests/: test_deployer_container.py  test_ingestor_synthesis.py
backend/uploads/: 823fd790-b900-48e2-8f6f-55fa939b1c3c.docx
(+168 files in other folders)
