[project]
name = "vitesse-backend"
version = "0.1.0"
authors = [{name = "Codermasky"}]
description = "Vitesse AI: High-Velocity Autonomous Integration Factory"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.3",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "chromadb>=0.4.0",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.128.3",
    "httpx>=0.28.1",
    "langchain>=1.2.9",
    "langchain-anthropic>=1.3.2",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "langfuse>=3.13.0",
    "langgraph>=1.0.8",
    "langgraph-checkpoint-postgres>=3.0.4",
    "msal>=1.34.0",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-exporter-otlp>=1.39.1",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-instrumentation-httpx>=0.60b1",
    "opentelemetry-sdk>=1.39.1",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=12.1.0",
    "prometheus-client>=0.21.0",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymupdf>=1.26.7",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.7.0,<2.0.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.2",
    "sentry-sdk>=2.52.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.46",
    "structlog>=25.5.0",
    "tiktoken>=0.12.0",
    "uvicorn>=0.40.0",
    "aether",
    "docker>=7.1.0",
    "mcp>=1.2.0",
    "deepdiff>=8.2.0",
    "pgvector>=0.3.6",
]

[tool.uv.sources]
aether = { path = "./aether" }

[tool.uv.extra-build-dependencies]
aether = ["hatchling", "setuptools"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
